tests/fixtures/svs-v3/invalid/truncated-extension.hex
245e065c071508036e646e080b7376732d76332d746573743601031400151ac918ca16070908046e6f6465080161d209d4046553f100d6010116031b010017209a9610ba142660e1e46a527543fef316102662ba16796920a2fff98304c7bc71cd08616263
